# libetch

./: CMakeLists.txt  README.md
include/etch/: ast.hpp  ast_adapted.hpp  codegen.hpp  compiler.hpp  config.hpp  expr.hpp  expr_def.hpp  linker.hpp  mangling.hpp  parser.hpp
include/etch/analysis/: dump.hpp  semantics.hpp  types.hpp
include/etch/ir/: types.hpp
include/etch/parser/: config.hpp  module.hpp  module_def.hpp  unit.hpp  unit_def.hpp
include/etch/syntax/: adapted.hpp  dump.hpp  types.hpp
include/etch/transform/: base.hpp  fold.hpp  resolution.hpp
src/etch/: codegen.cpp  compiler.cpp  expr.cpp  linker.cpp  mangling.cpp  parser.cpp
src/etch/parser/: expr.cpp  unit.cpp
